--- a/conf/ezbookkeeping.ini
+++ b/conf/ezbookkeeping.ini
@@ -46,13 +46,13 @@ mcp_allowed_remote_ips =
 
 [database]
 # Either "mysql", "postgres" or "sqlite3"
-type = sqlite3
+type = mysql
 
 # Database connection configuration, for "mysql" and "postgres"
-host = 127.0.0.1:3306
+host = mysql80.rdsmtm5j5efnm3c.rds.gz.baidubce.com:3306
 name = ezbookkeeping
-user = root
-passwd =
+user = africa
+passwd = Dkp348916318-bp12bz
 
 # For "postgres" database only, Either "disable", "require" or "verify-full"
 ssl_mode = disable
@@ -119,7 +119,7 @@ log_file_max_days = 7
 type = local_filesystem
 
 # For "local_filesystem" storage only, the storage root path (relative or absolute path)
-local_filesystem_path = storage/
+local_filesystem_path = E:\project\ezbookkeeping\storage
 
 # For "minio" storage only, the minio connection configuration
 minio_endpoint = 127.0.0.1:9000
