--- a/conf/ezbookkeeping.ini
+++ b/conf/ezbookkeeping.ini
@@ -3,7 +3,7 @@
 app_name = ezBookkeeping
 
 # Either "production", "development"
-mode = production
+mode = development
 
 [server]
 # Protocol (http, https, socket)
