--- a/conf/ezbookkeeping.ini
+++ b/conf/ezbookkeeping.ini
@@ -3,7 +3,7 @@
 app_name = ezBookkeeping
 
 # Either "production", "development"
-mode = development
+mode = production
 
 [server]
 # Protocol (http, https, socket)
@@ -16,7 +16,7 @@ http_addr = 0.0.0.0
 http_port = 8080
 
 # The domain name used to access ezBookkeeping
-domain = localhost
+domain = 117.24.12.232
 
 # The full url used to access ezBookkeeping in browser
 root_url = %(protocol)s://%(domain)s:%(http_port)s/
@@ -36,13 +36,6 @@ enable_gzip = false
 
 # Set to true to log each request and execution time
 log_request = true
-
-[mcp]
-# Set to true to enable MCP (Model Context Protocol) server (via http / https web server) for AI/LLM access
-enable_mcp = false
-
-# MCP server allowed remote IPs, a comma-separated list of allowed remote IPs (asterisk * for any addresses, e.g. 192.168.1.* means any IPs in the 192.168.1.x subnet), leave blank to allow all remote IPs
-mcp_allowed_remote_ips =
 
 [database]
 # Either "mysql", "postgres" or "sqlite3"
@@ -115,11 +108,11 @@ log_file_max_size = 104857600
 log_file_max_days = 7
 
 [storage]
-# Object storage type, supports "local_filesystem", "minio" and "webdav" currently
+# Object storage type, supports "local_filesystem" and "minio" currently
 type = local_filesystem
 
 # For "local_filesystem" storage only, the storage root path (relative or absolute path)
-local_filesystem_path = E:\project\ezbookkeeping\storage
+local_filesystem_path = storage/
 
 # For "minio" storage only, the minio connection configuration
 minio_endpoint = 127.0.0.1:9000
@@ -138,28 +131,6 @@ minio_bucket = ezbookkeeping
 
 # For "minio" storage only, the root path to store files in minio
 minio_root_path = /
-
-# For "webdav" storage only, the webdav url
-webdav_url =
-
-# For "webdav" storage only, the webdav username
-webdav_username =
-
-# For "webdav" storage only, the webdav password
-webdav_password =
-
-# For "webdav" storage only, the webdav root path to store files
-webdav_root_path = /
-
-# For "webdav" storage only, requesting webdav url timeout (0 - 4294967295 milliseconds)
-# Set to 0 to disable timeout for requesting webdav url, default is 10000 (10 seconds)
-webdav_request_timeout = 10000
-
-# For "webdav" storage only, proxy for requesting webdav url, supports "system" (use system proxy), "none" (do not use proxy), or proxy URL which starts with "http://", "https://" or "socks5://", default is "system"
-webdav_proxy = system
-
-# For "webdav" storage only, set to true to skip tls verification when connect webdav
-webdav_skip_tls_verify = false
 
 [uuid]
 # Uuid generator type, supports "internal" currently
@@ -265,8 +236,6 @@ max_user_avatar_size = 1048576
 # 9: Import Transactions
 # 10: Export Transactions
 # 11: Clear All Data
-# 12: Sync Application Settings
-# 13: MCP (Model Context Protocol) Access
 default_feature_restrictions =
 
 [data]
@@ -327,10 +296,10 @@ after_open_notification_content =
 map_provider = openstreetmap
 
 # Set to true to use the ezbookkeeping server to forward map data requests, for "openstreetmap", "openstreetmap_humanitarian", "opentopomap", "opnvkarte", "cyclosm", "cartodb", "tomtom", "tianditu" or "custom"
-map_data_fetch_proxy = false
+map_data_fetch_proxy = true
 
 # Proxy for ezbookkeeping server requesting original map data when map_data_fetch_proxy is set to true, supports "system" (use system proxy), "none" (do not use proxy), or proxy URL which starts with "http://", "https://" or "socks5://", default is "system"
-proxy = system
+proxy = socks5://127.0.0.1:10808
 
 # For "tomtom" map provider only, TomTom map API key, please visit https://developer.tomtom.com/how-to-get-tomtom-api-key for more information
 tomtom_map_api_key =
@@ -391,10 +360,8 @@ custom_map_tile_server_default_zoom_level = 14
 # "national_bank_of_romania": https://www.bnr.ro/Exchange-rates-1224.aspx
 # "bank_of_russia": https://www.cbr.ru/eng/currency_base/daily/
 # "swiss_national_bank": https://www.snb.ch/en/the-snb/mandates-goals/statistics/statistics-pub/current_interest_exchange_rates
-# "national_bank_of_ukraine": https://bank.gov.ua/ua/markets/exchangerates
 # "central_bank_of_uzbekistan": https://cbu.uz/en/arkhiv-kursov-valyut/
 # "international_monetary_fund": https://www.imf.org/external/np/fin/data/param_rms_mth.aspx
-# "user_custom": users set their own exchange rates data in the UI
 data_source = euro_central_bank
 
 # Requesting exchange rates data timeout (0 - 4294967295 milliseconds)
@@ -402,7 +369,7 @@ data_source = euro_central_bank
 request_timeout = 10000
 
 # Proxy for ezbookkeeping server requesting exchange rates data, supports "system" (use system proxy), "none" (do not use proxy), or proxy URL which starts with "http://", "https://" or "socks5://", default is "system"
-proxy = system
+proxy = socks5://127.0.0.1:10808
 
 # Set to true to skip tls verification when request exchange rates data
 skip_tls_verify = false
